<resources>
    <string name="app_name">HandlerTest</string>
    <string name="button1">post(Runable r) on UI thread</string>
    <string name="button2">postDelayed(Runable r, long delayMillis)\n延迟1秒</string>
    <string name="button3">postAtTime(RunnAble r, long uptimeMills)\n延迟2秒</string>
    <string name="button4">postAtFrontOfQueue(Runnable r)</string>
    <string name="button5">sendMessage(Message msg)</string>
    <string name="button6">sendMessageDelayed(Message msg, long delayMillis)\n延迟1秒</string>
    <string name="button7">sendMessageAtTime(Message msg, long delayMillis)\n延迟2秒</string>
    <string name="button8">sendMessageAtFrontOfQueue(Message msg)</string>
    <string name="button9">post(Runnable r) on background thread</string>
    <string name="button10">no crash: post(Runnable r) on background thread</string>
    <string name="button11">MessageQueue.IdleHandler</string>
    <string name="button12">handler.removeCallbacks(runnable)</string>
    <string name="button13">HandlerThread.quit()</string>
    <string name="button14">下一页</string>
</resources>
